@@ -2,3 +2,4 @@ Build/SysConfig
 tags
 git-repair
 dist
+dist-newstyle
